--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a href="https://mail.google.com" class="gmail"><i class="far fa-envelope"></i></a>
                     
                     <a href="https://www.linkedin.com/in/ragavi-v-731414226/" class="linkedin"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/ragavi242004" class="github"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/RagaviV24" class="github"><i class="fab fa-github"></i></a>
                 </div>
             </div>
             <div class="photo-container">
